[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qret-cli-bundle"
version = "0.1.0"
description = "Import-time qret binary bootstrapper"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "QunaSys" }]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]
package-dir = { "qret_cli_bundle" = "." }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
