[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qret-cli-bundle"
version = "0.1.0"
description = "Import-time qret binary bootstrapper"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QunaSys" }]
dependencies = [
  "streamlit>=1.30",
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.0",
  "graphviz>=0.20",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["qret_cli_bundle*"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
